fix: hidden horizontal scroll bar in mobile markup

--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ body {
 
   display: flex;
   align-items: start;
+
+  overflow-x: hidden;
 }
 
 h1 {
